1. Resolved code quality issues reported by Sonar Cloud.